@@ -331,7 +331,7 @@ public class XJepTest extends JepTest {
 		this.myAssertEquals(s1,r1,"[10,0,0.1,0.11,0.111,0.111]");
 		this.myAssertEquals(s2,r2,"[0.9,0.99,0.999,1]");
 		
-		j.addComplex();
+		//j.addComplex();
 		xj.println(j.parse("[0,1,i,1+i]"));
 		xj.getPrintVisitor().setMode(PrintVisitor.COMPLEX_I,true);
 		xj.println(xj.simplify(j.parse("(2+i)+(1+i)")));
@@ -390,6 +390,209 @@ public class XJepTest extends JepTest {
 		valueTest("MaxArg(x^2,x,1,5)",5);
 	}
 
+	public void testHex() throws Exception
+	{
+	    valueTest("toHex(0)","0x0");
+	    valueTest("toHex(0,1)","0x0.0");
+	    valueTest("toHex(0,2)","0x0.00");
+
+	    valueTest("toHex(1)","0x1");
+	    valueTest("toHex(1,1)","0x1.0");
+	    valueTest("toHex(1,2)","0x1.00");
+
+	    valueTest("toHex(-1)","-0x1");
+	    valueTest("toHex(-1,1)","-0x1.0");
+	    valueTest("toHex(-1,2)","-0x1.00");
+	    
+	    valueTest("toHex(7)","0x7");
+	    valueTest("toHex(7,1)","0x7.0");
+	    valueTest("toHex(7,2)","0x7.00");
+
+	    valueTest("toHex(-7)","-0x7");
+	    valueTest("toHex(-7,1)","-0x7.0");
+	    valueTest("toHex(-7,2)","-0x7.00");
+
+	    valueTest("toHex(8)","0x8");
+	    valueTest("toHex(8,1)","0x8.0");
+	    valueTest("toHex(8,2)","0x8.00");
+
+	    valueTest("toHex(-8)","-0x8");
+	    valueTest("toHex(-8,1)","-0x8.0");
+	    valueTest("toHex(-8,2)","-0x8.00");
+
+	    valueTest("toHex(10)","0xa");
+	    valueTest("toHex(10,1)","0xa.0");
+	    valueTest("toHex(10,2)","0xa.00");
+
+	    valueTest("toHex(-10)","-0xa");
+	    valueTest("toHex(-10,1)","-0xa.0");
+	    valueTest("toHex(-10,2)","-0xa.00");
+
+	    valueTest("toHex(15)","0xf");
+	    valueTest("toHex(15,1)","0xf.0");
+	    valueTest("toHex(15,2)","0xf.00");
+
+	    valueTest("toHex(-15)","-0xf");
+	    valueTest("toHex(-15,1)","-0xf.0");
+	    valueTest("toHex(-15,2)","-0xf.00");
+
+	    valueTest("toHex(16)","0x10");
+	    valueTest("toHex(16,1)","0x10.0");
+	    valueTest("toHex(16,2)","0x10.00");
+
+	    valueTest("toHex(-16)","-0x10");
+	    valueTest("toHex(-16,1)","-0x10.0");
+	    valueTest("toHex(-16,2)","-0x10.00");
+
+	    valueTest("toHex(17)","0x11");
+	    valueTest("toHex(17,1)","0x11.0");
+	    valueTest("toHex(17,2)","0x11.00");
+
+	    valueTest("toHex(-17)","-0x11");
+	    valueTest("toHex(-17,1)","-0x11.0");
+	    valueTest("toHex(-17,2)","-0x11.00");
+
+	    valueTest("toHex(256)","0x100");
+	    valueTest("toHex(256,1)","0x100.0");
+	    valueTest("toHex(256,2)","0x100.00");
+
+	    valueTest("toHex(-256)","-0x100");
+	    valueTest("toHex(-256,1)","-0x100.0");
+	    valueTest("toHex(-256,2)","-0x100.00");
+
+	    valueTest("toHex(1/16)","0x0");
+	    valueTest("toHex(1/16,1)","0x0.1");
+	    valueTest("toHex(1/16,2)","0x0.10");
+
+	    valueTest("toHex(-1/16)","-0x0");
+	    valueTest("toHex(-1/16,1)","-0x0.1");
+	    valueTest("toHex(-1/16,2)","-0x0.10");
+
+	    valueTest("toHex(7/16)","0x0");
+	    valueTest("toHex(7/16,1)","0x0.7");
+	    valueTest("toHex(7/16,2)","0x0.70");
+
+	    valueTest("toHex(-7/16)","-0x0");
+	    valueTest("toHex(-7/16,1)","-0x0.7");
+	    valueTest("toHex(-7/16,2)","-0x0.70");
+
+	    valueTest("toHex(8/16)","0x1");
+	    valueTest("toHex(8/16,1)","0x0.8");
+	    valueTest("toHex(8/16,2)","0x0.80");
+
+	    valueTest("toHex(-8/16)","-0x1");
+	    valueTest("toHex(-8/16,1)","-0x0.8");
+	    valueTest("toHex(-8/16,2)","-0x0.80");
+
+	    valueTest("toHex(10/16)","0x1");
+	    valueTest("toHex(10/16,1)","0x0.a");
+	    valueTest("toHex(10/16,2)","0x0.a0");
+
+	    valueTest("toHex(-10/16)","-0x1");
+	    valueTest("toHex(-10/16,1)","-0x0.a");
+	    valueTest("toHex(-10/16,2)","-0x0.a0");
+
+	    valueTest("toHex(15/16)","0x1");
+	    valueTest("toHex(15/16,1)","0x0.f");
+	    valueTest("toHex(15/16,2)","0x0.f0");
+
+	    valueTest("toHex(-15/16)","-0x1");
+	    valueTest("toHex(-15/16,1)","-0x0.f");
+	    valueTest("toHex(-15/16,2)","-0x0.f0");
+	    
+	    valueTest("toHex(17/16)","0x1");
+	    valueTest("toHex(17/16,1)","0x1.1");
+	    valueTest("toHex(17/16,2)","0x1.10");
+
+	    valueTest("toHex(-17/16)","-0x1");
+	    valueTest("toHex(-17/16,1)","-0x1.1");
+	    valueTest("toHex(-17/16,2)","-0x1.10");
+	    
+	    valueTest("toHex(31/16)","0x2");
+	    valueTest("toHex(31/16,1)","0x1.f");
+	    valueTest("toHex(31/16,2)","0x1.f0");
+
+	    valueTest("toHex(-31/16)","-0x2");
+	    valueTest("toHex(-31/16,1)","-0x1.f");
+	    valueTest("toHex(-31/16,2)","-0x1.f0");
+	    
+	    valueTest("toHex(1/256)","0x0");
+	    valueTest("toHex(1/256,1)","0x0.0");
+	    valueTest("toHex(1/256,2)","0x0.01");
+
+	    valueTest("toHex(-1/256)","-0x0");
+	    valueTest("toHex(-1/256,1)","-0x0.0");
+	    valueTest("toHex(-1/256,2)","-0x0.01");
+
+	    valueTest("toHex(15/256)","0x0");
+	    valueTest("toHex(15/256,1)","0x0.1");
+	    valueTest("toHex(15/256,2)","0x0.0f");
+
+	    valueTest("toHex(-15/256)","-0x0");
+	    valueTest("toHex(-15/256,1)","-0x0.1");
+	    valueTest("toHex(-15/256,2)","-0x0.0f");
+
+	    valueTest("toHex(17/256)","0x0");
+	    valueTest("toHex(17/256,1)","0x0.1");
+	    valueTest("toHex(17/256,2)","0x0.11");
+
+	    valueTest("toHex(-17/256)","-0x0");
+	    valueTest("toHex(-17/256,1)","-0x0.1");
+	    valueTest("toHex(-17/256,2)","-0x0.11");
+
+	    valueTest("toHex(127/256)","0x0");
+	    valueTest("toHex(127/256,1)","0x0.8");
+	    valueTest("toHex(127/256,2)","0x0.7f");
+
+	    valueTest("toHex(-127/256)","-0x0");
+	    valueTest("toHex(-127/256,1)","-0x0.8");
+	    valueTest("toHex(-127/256,2)","-0x0.7f");
+
+	    valueTest("toHex(128/256)","0x1");
+	    valueTest("toHex(128/256,1)","0x0.8");
+	    valueTest("toHex(128/256,2)","0x0.80");
+
+	    valueTest("toHex(-128/256)","-0x1");
+	    valueTest("toHex(-128/256,1)","-0x0.8");
+	    valueTest("toHex(-128/256,2)","-0x0.80");
+
+	    valueTest("toHex(240/256)","0x1");
+	    valueTest("toHex(240/256,1)","0x0.f");
+	    valueTest("toHex(240/256,2)","0x0.f0");
+
+	    valueTest("toHex(-240/256)","-0x1");
+	    valueTest("toHex(-240/256,1)","-0x0.f");
+	    valueTest("toHex(-240/256,2)","-0x0.f0");
+
+	    valueTest("toHex(248/256)","0x1");
+	    valueTest("toHex(248/256,1)","0x1.0");
+	    valueTest("toHex(248/256,2)","0x0.f8");
+
+	    valueTest("toHex(-248/256)","-0x1");
+	    valueTest("toHex(-248/256,1)","-0x1.0");
+	    valueTest("toHex(-248/256,2)","-0x0.f8");
+	    
+	    valueTest("toHex(1/4096)","0x0");
+	    valueTest("toHex(1/4096,1)","0x0.0");
+	    valueTest("toHex(1/4096,2)","0x0.00");
+	    valueTest("toHex(1/4096,3)","0x0.001");
+	    valueTest("toHex(1/4096,4)","0x0.0010");
+
+	    valueTest("toHex(1+1/4096)","0x1");
+	    valueTest("toHex(1+1/4096,1)","0x1.0");
+	    valueTest("toHex(1+1/4096,2)","0x1.00");
+	    valueTest("toHex(1+1/4096,3)","0x1.001");
+	    valueTest("toHex(1+1/4096,4)","0x1.0010");
+	    
+	    XJep xj = (XJep) j;
+	    BaseFormat bf = new BaseFormat(16,"0x");
+	    bf.setMaximumFractionDigits(0);
+	    xj.getPrintVisitor().setNumberFormat(bf);
+	    String st = "10 x+15 x^2 - 16 x^3 + 32 x^4 - 256 x^5";
+	    Node n = xj.parse(st);
+	    String res = xj.toString(n);
+	    myAssertEquals(st,"0xa*x+0xf*x^0x2-0x10*x^0x3+0x20*x^0x4-0x100*x^0x5",res);
+}
 	public void testBad() throws Exception
 	{
 		if(SHOW_BAD)
